--- a/README.html
+++ b/README.html
@@ -1,4 +1,23 @@
-<h1 id="order-js">order.js</h1>
-<p>This is a program in which you take an order with nested functions with the arguments including topping, crust type, and size. The price is calculated. Based on the number of orders in a group of customers, the total group order price is calculated.</p>
-<p>A function declaration calculates sub total, adds 6% tax, and prints the total in US Dollars. The total is calculated by adding the total side cost - a constant integer price per side - and the total meal cost - a constant integer price per meal. When you call the group order function, you pass every customers&#39; order as a value of the array, the one and only argument of the group order function call. You can take different types of food orders by calling different functions for the take order.</p>
-<p>The following are the current options to order food and drinks: pizza, hot dog, box of fries, drink, more to come</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>README</title>
+	<style>
+		body {
+			font-weight:400; 
+			font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
+
+		p {
+			color: #606c71;
+		}
+	</style>
+</head>
+<body>
+	<h1 style = 'color: #159957;' id = "order-js">Order.js</h1>
+	<p>This is a program in which you take an order with nested functions with the arguments including topping, crust type, and size. The price is calculated. Based on the number of orders in a group of customers, the total group order price is calculated.</p>
+	<p>A function declaration calculates sub total, adds 6% tax, and prints the total in US Dollars. The total is calculated by adding the total side cost - a constant integer price per side - and the total meal cost - a constant integer price per meal. When you call the group order function, you pass every customers&#39; order as a value of the array, the one and only argument of the group order function call. You can take different types of food orders by calling different functions for the take order.</p>
+	<p>The following are the current options to order food and drinks: pizza, hot dog, box of fries, drink, more to come</p>
+</body>
+</html>
+
