Updated link to JavaScript files
Before: Parent Directory
Now: Common Directory

--- a/index2.html
+++ b/index2.html
@@ -49,8 +49,8 @@
         <object width="900" height="270" data="./README.html" type="text/html"></object>
 
         <div id = "program"> </div>
-        <script src = "../orderIn.js"></script>
-        <script src = "../order.js"></script>
+        <script src = "./orderIn.js"></script>
+        <script src = "./order.js"></script>
 
         <p><a href="https://knowledgeablekangaroo.github.io">Home</a></p>
 
