Put in a highlighted box
Put output in div.highlight with div.gt#program
Red color and light grey background

--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,9 @@
 
         <object width="900" height="270" data="./README.html" type="text/html"></object>
 
-        <div id = "program"> </div>
+        <div class = "highlight"> 
+            <div class = "gt" id = "program"> </div>
+        </div>
         <script src = "./orderIn.js"></script>
         <script src = "./order.js"></script>
 
