Add order button

--- a/index2.html
+++ b/index2.html
@@ -55,14 +55,19 @@
                 <option value = "pizza"> Pizza </option>
                 <option value = "hotDog"> Hot Dog </option>
                 <option value = "fries"> Fries </option>
+                <option value = "drink"> Drink </option>
             </select> <br>
             <label for = "orderTopping">Enter your topping: </label>
             <input type = "text" name = "orderTopping"> <br> 
             <label for = "crustType">Enter your crust: </label>
             <input type = "text" name = "crustType"> <br>  
             <label for = "size">Enter the size of your pizza: </label>
-            <input type = "text" name = "size"> <br>
-            <br> <input type="button" value="Order" onclick="showOrder()"/>
+            <input type = "text" name = "size" required> <br>  
+            <label for = "quantity">Enter your quantity: </label>
+            <input type = "text" name = "quantity"> <br>  
+            <br>
+
+            <button onclick = "duplicateForm()">+ Add Order</button>
         </form> <br>
 
         <div class = "highlight"> 
