Order & Add Order input buttons

--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,8 @@
             <input type = "text" name = "quantity"> <br>  
             <br>
 
-            <button onclick = "duplicateForm()">+ Add Order</button>
+            <input type = "button" value = "Order" onclick = "showOrder()" />
+            <input type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         </form> <br>
 
         <div class = "highlight"> 
