Specified height to output box

--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@
             <input type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         </form> <br>
 
-        <div class = "highlight"> 
+        <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
         <script src = "./orderIn.js"></script>
