Added drink option

--- a/index2.html
+++ b/index2.html
@@ -65,6 +65,8 @@
             <input type = "text" name = "size" required> <br>  
             <label for = "quantity">Enter your quantity: </label>
             <input type = "text" name = "quantity"> <br>  
+            <label for = "drink"> Enter your drink </label>
+            <input type = "text" name = "drink"> <br>
             <br>
 
             <input type = "button" value = "Order" onclick = "showOrder()" />
