--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
             <input type = "text" name = "orderTopping"> <br> 
             <label for = "crustType">Enter your crust: </label>
             <input type = "text" name = "crustType"> <br>  
-            <label for = "size">Enter the size of your pizza: </label>
+            <label for = "size">Enter the size: </label>
             <input type = "text" name = "size" required> <br>  
             <label for = "quantity">Enter your quantity: </label>
             <input type = "text" name = "quantity"> <br>  
@@ -73,7 +73,7 @@
             <input type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         </form> <br>
 
-        <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
+        <div id = "writeroot" style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
         <script src = "./orderIn.js"></script>
