--- a/index2.html
+++ b/index2.html
@@ -69,11 +69,11 @@
             <input type = "text" name = "drink"> <br>
             <br>
 
-            <input type = "button" value = "Order" onclick = "showOrder()" />
+            <input type = "button" value = "Order" onclick = "showOrder(this)" />
             <input type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         </form> <br>
-
-        <div id = "writeroot" style = "height: 50vh; overflow: auto;" class = "highlight"> 
+        <input id = "writeroot" type = "button" value = "Finish Order" onclick = "orderAll()">
+        <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
         <script src = "./orderIn.js"></script>
