--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
             <label for = "drink"> Enter your drink </label>
             <input type = "text" name = "drink"> <br>
             <br>
-            <input type = "button" value = "Remove Order">
+            <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
         </form>
         <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         <input type = "button" value = "Finish Order" onclick = "orderAll(this)">
