Manually called each order
Only known working way so far

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -60,7 +60,7 @@
         <h2>About</h2>
         <p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.</p>
 
-        <object width="900" height="270" data="./README.html" type="text/html"></object>
+        <object width="900" height="270" data="../README.html" type="text/html"></object>
 
         <form action = "">
             <label for = "orderType">Enter the type of food order: </label>
@@ -85,7 +85,7 @@
             <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
         </form>
         <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
-        <input type = "button" value = "Finish Order" onclick = "orderAll(this)">
+        <input type = "button" value = "Finish Order" onclick = "orderAll()">
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
