--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 <script src = "https://cdn.rawgit.com/KnowledgeableKangaroo/KnowledgeableKangaroo.github.io/master/script.js"></script>
 <script> 
     let sslink = document.createElement("link"); 
-    sslink.href = "../css/style.css";
+    sslink.href = "css/style.css";
     sslink.rel = "stylesheet";
     sslink.type = "text/css";
     document.head.appendChild(sslink);
@@ -13,7 +13,7 @@
     let favLink = document.createElement("link");
     favLink.rel = "shortcut icon";
     favLink.type = "images/x-icon";
-    favLink.href = "../images/icon.ico";
+    favLink.href = "images/icon.ico";
     document.head.appendChild(favLink);
 </script>
 
