Thank you message for submitted form
1. The forms, `removeOrder` button and `Finish Order` button got wrapped in a div with a selector 'div#forms'.
2. Used this to remove all forms and buttons
3. Replaced div with a thank you message.

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -61,31 +61,32 @@
         <p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.</p>
 
         <object width="900" height="270" data="../README.html" type="text/html"></object>
-
-        <form action = "">
-            <label for = "orderType">Enter the type of food order: </label>
-            <select name = "orderType" id = "orderType" required>
-                <option value = "">--Select a type--</option>
-                <option value = "pizza"> Pizza </option>
-                <option value = "hotDog"> Hot Dog </option>
-                <option value = "fries"> Fries </option>
-                <option value = "drink"> Drink </option>
-            </select> <br>
-            <label for = "orderTopping">Enter your topping: </label>
-            <input type = "text" name = "orderTopping"> <br> 
-            <label for = "crustType">Enter your crust: </label>
-            <input type = "text" name = "crustType"> <br>  
-            <label for = "size">Enter the size: </label>
-            <input type = "text" name = "size" required> <br>  
-            <label for = "quantity">Enter your quantity: </label>
-            <input type = "text" name = "quantity"> <br>  
-            <label for = "drink"> Enter your drink </label>
-            <input type = "text" name = "drink"> <br>
-            <br>
-            <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
-        </form>
-        <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
-        <input type = "button" value = "Finish Order" onclick = "orderAll()">
+        <div id = "forms">
+            <form action = "">
+                <label for = "orderType">Enter the type of food order: </label>
+                <select name = "orderType" id = "orderType" required>
+                    <option value = "">--Select a type--</option>
+                    <option value = "pizza"> Pizza </option>
+                    <option value = "hotDog"> Hot Dog </option>
+                    <option value = "fries"> Fries </option>
+                    <option value = "drink"> Drink </option>
+                </select> <br>
+                <label for = "orderTopping">Enter your topping: </label>
+                <input type = "text" name = "orderTopping"> <br> 
+                <label for = "crustType">Enter your crust: </label>
+                <input type = "text" name = "crustType"> <br>  
+                <label for = "size">Enter the size: </label>
+                <input type = "text" name = "size" required> <br>  
+                <label for = "quantity">Enter your quantity: </label>
+                <input type = "text" name = "quantity"> <br>  
+                <label for = "drink"> Enter your drink </label>
+                <input type = "text" name = "drink"> <br>
+                <br>
+                <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
+            </form>
+            <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
+            <input type = "button" value = "Finish Order" onclick = "orderAll()">
+        </div>
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
