Divided into separate functions
Cleared clutter by separating orderAll() into orderFood() and displaySubmitMessage()

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -61,7 +61,7 @@
         <p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.</p>
 
         <object width="900" height="270" data="../README.html" type="text/html"></object>
-        <div id = "forms">
+        <div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
             <form action = "">
                 <label for = "orderType">Enter the type of food order: </label>
                 <select name = "orderType" id = "orderType" required>
@@ -79,7 +79,7 @@
                 <input type = "text" name = "size" required> <br>  
                 <label for = "quantity">Enter your quantity: </label>
                 <input type = "text" name = "quantity"> <br>  
-                <label for = "drink"> Enter your drink </label>
+                <label for = "drink">Enter your drink: </label>
                 <input type = "text" name = "drink"> <br>
                 <br>
                 <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
