--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 <body>
     <script> 
         let sslink = document.createElement("link"); 
-        sslink.href = "../css/style.css";
+        sslink.href = "./css/style.css";
         sslink.rel = "stylesheet";
         sslink.type = "text/css";
         document.head.appendChild(sslink);
@@ -42,7 +42,7 @@
         let favLink = document.createElement("link");
         favLink.rel = "shortcut icon";
         favLink.type = "images/x-icon";
-        favLink.href = "../images/icon.ico";
+        favLink.href = "./images/icon.ico";
         document.head.appendChild(favLink);
     </script>
 
@@ -89,8 +89,8 @@
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
-        <script src = "../scripts/orderIn.js"></script>
-        <script src = "../scripts/order.js"></script>
+        <script src = "./scripts/orderIn.js"></script>
+        <script src = "./scripts/order.js"></script>
 
         <p><a href="https://knowledgeablekangaroo.github.io">Home</a></p>
 
