--- a/index2.html
+++ b/index2.html
@@ -59,11 +59,11 @@
         <h2>About</h2>
         <p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.</p>
 
-        <object width="900" height="270" data="../README.html" type="text/html"></object>
+        <object width="900" height="270" data="./README.html" type="text/html"></object>
         <div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
             <form action = "">
                 <label for = "orderType">Enter the type of food order: </label>
-                <select name = "orderType" id = "orderType" required>
+                <select onclick = "disableUnnecessaryFields(this)" name = "orderType" id = "orderType" required>
                     <option value = "">--Select a type--</option>
                     <option value = "pizza"> Pizza </option>
                     <option value = "hotDog"> Hot Dog </option>
