Disabled and enable submit button

--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
                 <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
             </form>
             <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
-            <input type = "button" value = "Finish Order" onclick = "orderAll()">
+            <input disabled type = "button" value = "Finish Order" onclick = "orderAll()">
         </div>
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
