Remove all traces crustType
For practice

--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
         <div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
             <form action = "">
                 <label for = "orderType">Enter the type of food order: </label>
-                <select onchange = "enableFields(this)" name = "orderType" id = "orderType" required>
+                <select onchange = "enableFields(this); removeUnnecessary(this.parentNode);" name = "orderType" id = "orderType" required>
                     <option value = "">--Select a type--</option>
                     <option value = "pizza"> Pizza </option>
                     <option value = "hotDog"> Hot Dog </option>
