Turned toppings into select menu
This proves that the problem does not lie within the select menu

--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,12 @@
                     <option value = "drink"> Drink </option>
                 </select> <br>
                 <label for = "orderTopping">Enter your topping: </label>
-                <input class = "pizza fries" disabled type = "text" name = "orderTopping"> <br> 
+                <select class = "pizza fries" disabled type = "text" name = "orderTopping">
+                    <option value = "">--Select a Topping--</option>
+                    <option value = "pepperoni">Pepperoni</option>
+                    <option value = "mushroom">Mushroom</option>
+                    <option value = "">None</option>
+                </select> <br> 
                 <label for = "crustType">Enter your crust: </label>
                 <input class = "pizza" disabled type = "text" name = "crustType"> <br>  
                 <label for = "size">Enter the size: </label>
