--- a/index2.html
+++ b/index2.html
@@ -71,10 +71,12 @@
                     <option value = "drink"> Drink </option>
                 </select> <br>
                 <label for = "orderTopping">Enter your topping: </label>
-                <select class = "pizza fries" disabled type = "text" name = "orderTopping">
+                <select class = "pizza fries" disabled id = "orderTopping" name = "orderTopping">
                     <option value = "">--Select a Topping--</option>
-                    <option value = "pepperoni">Pepperoni</option>
+                    <option value = "pepperoni"> Pepperoni </option>
                     <option value = "mushroom">Mushroom</option>
+                    <option value = "veggie">Vegetable</option>
+                    <option value = "sausage">Sausage</option>
                     <option value = "">None</option>
                 </select> <br> 
                 <label for = "crustType">Enter your crust: </label>
