--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
         <div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
             <form action = "">
                 <label for = "orderType">Enter the type of food order: </label>
-                <select onchange = "enableFields(this)" name = "orderType" id = "orderType" required>
+                <select onchange = "enableFields(this); removeUnnecessary(this.parentNode);" name = "orderType" id = "orderType" required>
                     <option value = "">--Select a type--</option>
                     <option value = "pizza"> Pizza </option>
                     <option value = "hotDog"> Hot Dog </option>
@@ -71,27 +71,42 @@
                     <option value = "drink"> Drink </option>
                 </select> <br>
                 <label for = "orderTopping">Enter your topping: </label>
-                <input disabled type = "text" name = "orderTopping"> <br> 
+                <select class = "pizza fries" disabled id = "orderTopping" name = "orderTopping">
+                    <option value = "">--Select a Topping--</option>
+                    <option value = "pepperoni"> Pepperoni </option>
+                    <option value = "mushroom">Mushroom</option>
+                    <option value = "veggie">Vegetable</option>
+                    <option value = "sausage">Sausage</option>
+                    <option value = "">None</option>
+                </select> <br> 
                 <label for = "crustType">Enter your crust: </label>
-                <input disabled type = "text" name = "crustType"> <br>  
+                <input class = "pizza" disabled type = "text" name = "crustType"> <br>  
                 <label for = "size">Enter the size: </label>
-                <input disabled type = "text" name = "size" required> <br>  
+                <input class = "pizza fries drink" disabled type = "text" name = "size" required> <br>  
                 <label for = "quantity">Enter your quantity: </label>
-                <input disabled type = "text" name = "quantity"> <br>  
+                <input class = "pizza hotDog fries drink" disabled type = "text" name = "quantity"> <br>  
                 <label for = "drink">Enter your drink: </label>
-                <input disabled type = "text" name = "drink"> <br>
+                <input class = "drink" disabled type = "text" name = "drink"> <br>
+                <label for = "condiments">Enter your condiments: </label>
+                <select class = "hotDog" disabled name = "condiments" id = "condiments">
+                    <option value = "">--Select a condiment--</option>
+                    <option value = "Ketchup"> Ketchup </option>
+                    <option value = "Mustard"> Mustard </option>
+                    <option value = "Relish"> Relish </option>
+                    <option value = "Chili"> Chili </option>
+                </select> <br>
                 <br>
                 <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
             </form>
             <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
-            <input type = "button" value = "Finish Order" onclick = "orderAll()">
+            <input disabled type = "button" value = "Finish Order" onclick = "orderAll()">
         </div>
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
         </div>
-        <script src = "./scripts/helperFunctions.js"></script>
-        <script src = "./scripts/orderIn.js"></script>
-        <script src = "./scripts/order.js"></script>
+        <script src = "scripts/helperFunctions.js"></script>
+        <script src = "scripts/orderIn.js"></script>
+        <script src = "scripts/order.js"></script>
 
         <p><a href="https://knowledgeablekangaroo.github.io">Home</a></p>
 
