--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
                     <option value = "burger"> Burger </option>
                 </select> <br>
                 <label for = "orderTopping">Enter your topping: </label>
-                <select class = "pizza fries burger" disabled id = "orderTopping" name = "orderTopping">
+                <select class = "pizza fries" disabled id = "orderTopping" name = "orderTopping">
                     <option value = "">--Select a Topping--</option>
                     <option value = "pepperoni"> Pepperoni </option>
                     <option value = "mushroom">Mushroom</option>
@@ -98,6 +98,7 @@
                 </select> <br>
                 <br>
                 <input type = "button" value = "Remove Order" onclick = "removeOrder(this)">
+                <textarea style = "display: none"></textarea>
             </form>
             <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
             <input disabled type = "button" value = "Finish Order" onclick = "orderAll()">
