--- a/index2.html
+++ b/index2.html
@@ -83,7 +83,7 @@
                 <label for = "crustType">Enter your crust: </label>
                 <input class = "pizza" disabled type = "text" name = "crustType"> <br>  
                 <label for = "size">Enter the size: </label>
-                <input class = "pizza fries drink" disabled type = "text" name = "size" required> <br>  
+                <input class = "pizza fries drink" disabled type = "text" name = "size"> <br>  
                 <label for = "quantity">Enter your quantity: </label>
                 <input class = "pizza hotDog fries drink burger" disabled type = "text" name = "quantity"> <br>  
                 <label for = "drink">Enter your drink: </label>
