--- a/index2.html
+++ b/index2.html
@@ -102,6 +102,12 @@
             </form>
             <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
             <input disabled type = "button" value = "Finish Order" onclick = "orderAll()">
+            <fieldset>
+                <legend>Personal: </legend>
+                <label for = "name">Name: </label><input name = "name" type="text"><br>
+                <label for = "email">Email: </label><input type="text"><br>
+                <label for = "" <input type="text">
+            </fieldset>
         </div>
         <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
             <div class = "gt" id = "program"> </div>
