--- a/README.html
+++ b/README.html
@@ -1,5 +1,6 @@
 <p>This is a program in which you take an order with nested functions with the arguments including topping, crust type, and size. The price is calculated. Based on the number of orders in a group of customers, the total group order price is calculated.</p>
 <p>A function declaration calculates sub total, adds 6% tax, and prints the total in US Dollars. The total is calculated by adding the total side cost - a constant integer price per side - and the total meal cost - a constant integer price per meal. When you call the group order function, you pass every customers&#39; order as a value of the array, the one and only argument of the group order function call. You can take different types of food orders by calling different functions for the take order.</p>
+<p>In the new version of the app, the destructuring technique is used. In each of the functions for the orders listed below, the argument is an object. In the function, the object properties are referred to as if they are regular parameters. This is achieved by wrapping the properties in curly braces in the parameter list, called <strong>destructuring</strong>. </p>
 <p>The following are the current options to order food and drinks:</p>
 <ul>
 <li>pizza</li>
