Renamed style.css to normalize.css
It was disregarding everything in the "actual" css file. It is now called normalize.css and only linked for local testing files.

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@
 </ul>
 <script> 
     let sslink = document.createElement("link"); 
-    sslink.href = "css/style.css";
+    sslink.href = "css/normalize.css";
     sslink.rel = "stylesheet";
     sslink.type = "text/css";
     document.head.appendChild(sslink);
