--- a/index2.html
+++ b/index2.html
@@ -28,13 +28,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="/order.js/assets/css/style.css?v=08d778e6c7370464cd5dd3fa2b74ed9abe6fafdc">
 </head>
 
 <body>
     <script> 
         let sslink = document.createElement("link"); 
-        sslink.href = "./css/style.css";
+        sslink.href = "css/normalize.css";
         sslink.rel = "stylesheet";
         sslink.type = "text/css";
         document.head.appendChild(sslink);
@@ -42,7 +41,7 @@
         let favLink = document.createElement("link");
         favLink.rel = "shortcut icon";
         favLink.type = "images/x-icon";
-        favLink.href = "./images/icon.ico";
+        favLink.href = "images/icon.ico";
         document.head.appendChild(favLink);
     </script>
 
