improved developer experience

--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 <body>
     <script> 
         let sslink = document.createElement("link"); 
-        sslink.href = "./css/style.css";
+        sslink.href = "css/style.css";
         sslink.rel = "stylesheet";
         sslink.type = "text/css";
         document.head.appendChild(sslink);
@@ -42,7 +42,7 @@
         let favLink = document.createElement("link");
         favLink.rel = "shortcut icon";
         favLink.type = "images/x-icon";
-        favLink.href = "./images/icon.ico";
+        favLink.href = "images/icon.ico";
         document.head.appendChild(favLink);
     </script>
 
