--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
             <option value = "burger"> Burger 
             </option>
           </select> <br>
-          <label for = "orderType">Enter the type of food order: 
+          <label for = "orderTopping">Enter your topping
           </label>
           <select class = "pizza" disabled id = "orderTopping" name = "orderTopping">
             <option value = "">--Select a Topping--
@@ -126,20 +126,6 @@
         </form>
         <input id = "writeroot" type = "button" value = "+ Add Order" onclick = "duplicateForm()" />
         <input id = "finish-order" disabled type = "button" value = "Finish Order" onclick = "orderAll()">
-        <fieldset>
-          <legend>Personal: 
-          </legend>
-          <p>
-            <label for = "name">Name: 
-            </label>
-            <input name = "name" type = "text">
-          </p>
-          <p>
-            <label for = "email">Email: 
-            </label>
-            <input id = 'email' name = "email" type = "email">
-          </p>
-        </fieldset>
       </div>
       <div style = "height: 50vh; overflow: auto;" class = "highlight"> 
         <div class = "gt" id = "program"> 
