--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
     <!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
+    <link href = "css/additions.css" rel = "stylesheet" type = "text/css">
   </head>
   <body>
     <script src = "https://cdn.jsdelivr.net/gh/KnowledgeableKangaroo/KnowledgeableKangaroo.github.io/script.js">
