--- a/index2.html
+++ b/index2.html
@@ -45,18 +45,24 @@
       </h1>
 
 
-<div id = "snowflakes-photo" class = "discount-season">
-    <a id = "snowflake" href = "https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target = "_blank" rel = "noopener noreferrer" title = "Download free do whatever you want high-resolution photos from Kalle Kortelainen">
+<div id="snowflakes-photo">
+  <a id="snowflake" href="https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalle Kortelainen">
         <span>
             <svg xmlns = "http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                 <title>unsplash-logo</title>
                 <path d = "M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
             </svg>
-        </span>
-        <img src = "images/snowflakes.jpg">
+        </span> <br>
+        <div class = "wrap">
+          <img src = "https://images.unsplash.com/photo-1492584115029-f633e64c61fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80" width = "1000">
+          <div class = "text_over_image">
+          Winter Season 20% Discount
+          </div>
+        </div>
         <span>Kalle Kortelainen</span>
     </a>
 </div>
+
       
       <h2>About
       </h2>
