--- a/index2.html
+++ b/index2.html
@@ -52,12 +52,13 @@
                 <title>unsplash-logo</title>
                 <path d = "M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
             </svg>
-        </span> <br>
+        </span> 
+        <br>
         <div class = "wrap">
-          <img src = "https://images.unsplash.com/photo-1492584115029-f633e64c61fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80" width = "1000">
-          <div class = "text_over_image">
-          Winter Season 20% Discount
-          </div>
+          <img src = "images/snowflakes.jpg" width = "1000">
+          <p class = "text_over_image">
+            Winter Season 20% Discount
+          </p>
         </div>
         <span>Kalle Kortelainen</span>
     </a>
