Give 20% Winter Discount (#25)
* Added new stylesheet, snowflake photo

New files:
- additions.css
- images/snowflakes.jpg

* Accurately credited snowflake picture

* Update order.js

* Centered Winter Discount over snowflakes

* Only show picture if winter

* Update order.js

* Update order.js

* Use conditional

* Update index2.html

--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
     <!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
+    <link href = "css/additions.css" rel = "stylesheet" type = "text/css">
   </head>
   <body>
     <script src = "https://cdn.jsdelivr.net/gh/KnowledgeableKangaroo/KnowledgeableKangaroo.github.io/script.js">
@@ -42,10 +43,33 @@
     <section class="main-content">
       <h1 id="orderjs">Order.js
       </h1>
+
+
+<div style = "display: none" id="snowflakes-photo">
+  <a id="snowflake" href="https://unsplash.com/@kalleandco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalle Kortelainen">
+        <span>
+            <svg xmlns = "http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                <title>unsplash-logo</title>
+                <path d = "M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
+            </svg>
+        </span> 
+        <br>
+        <div class = "wrap">
+          <img src = "images/snowflakes.jpg" width = "1000">
+          <p class = "text_over_image">
+            Winter Season 20% Discount
+          </p>
+        </div>
+        <span>Kalle Kortelainen</span>
+    </a>
+</div>
+
+      
       <h2>About
       </h2>
       <p>Order.js is the first ES6 program (through the console) I have made that is hosted on GitHub through Git workflow. The person takes an order through a function call and the price is calculated based on what they ordered and how many items.
       </p>
+
       <object width="900" height="270" data="README.html" type="text/html">
       </object>
       <div id = "forms" style = "border-color: rgba(27, 63, 68, 0.2); border-width: 1px; border-style: inset; padding: 2%; margin: 2%">
