--- a/index2.html
+++ b/index2.html
@@ -161,6 +161,8 @@
       </script>
       <script src = "scripts/order.js">
       </script>
+      <script src = "scripts/unaccessibleContent.js">
+      </script>
       <p>
         <a href="https://knowledgeablekangaroo.github.io">Home
         </a>
